# node-app-js-gcp

./: .bazelrc  .gitignore  .terraform.lock.hcl  BUILD  MODULE.bazel  README.bazel.md  README.md  images.tf  images_aws.tf  jest.config.js  main.tf  main_aws.tf  package.json  pnpm-lock.yaml  support.tf  support_aws.tf  vpc.tf  vpc_aws.tf  workflows.tf  workflows_aws.tf
.aspect/cli/: config.yaml
.aspect/workflows/: config.yaml
.buildkite/: pipeline.yaml
.circleci/: config.yaml  config.yml
.github/workflows/: .aspect-workflows-reusable.yaml  aspect-workflows-delivery.yaml  main.yaml
tools/: BUILD  repin
tools/format/: BUILD
tools/lint/: BUILD  linters.bzl
